--- a/index.html
+++ b/index.html
@@ -1,72 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-</head>
-<body>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Palmer Giblette | WDD 130</title>
+  </head>
+  <body>
     <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-        </nav>
+      <nav>
+        <a href="#">Home</a>
+        <a href="wwr/index.html">White water rafting website</a>
+        <a href="wwr/site-plan-developing.html">White water rafting Siteplan</a>
+      </nav>
     </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-        </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Beyond the simple adventures</h1>
-            <h4>Dry Oar is here to make new wonderful memories </h4>
-            <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
-            </div>
-        </section>
-    </div>
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
-        <section class="msg">
-            <h2>Beyond the joys of adventure</h2>
-            <p>The serenity of feeling nature at its finest, and seeing why it is called the great outdoors! </p>
-            <a class='join' href="rivers.html">Join Us</a>
-        </section>
+    <main>
+      <h1>Palmer Giblette | WDD 130</h1>
+      <img src="images/profile.jpg" alt="Hey hey, I am Palmer Giblette" width="200">
+      <p>Hey hey! I am Palmer Giblette, and I from Montana, I am married to the love of my life. I also love to fly my drone. </p>
     </main>
-</main>
-<footer>
-    <p>Dry Oar &copy; 2023 - Palmer Giblette</p>
-    <p><a href="site-plan-rafting.html">Site Plan</a></p>
-    <p><a href="contactus.html">Contact Us</a></p>
-    <div class="social">
-        <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook.png" alt="fb icon">
-        </a>
-        <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter.png" alt="twitter icon">
-        </a>
-        <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram.png" alt="instagram icon">
-        </a>
-    </div>
-</footer>
-    </body>
+    <footer>
+      <p>©️2023 Palmer Giblette , Montana</p>
+    </footer>
+  </body>
 </html>
