--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav>
         <a href="#">Home</a>
         <a href="wwr/index.html">White water rafting website</a>
-        <a href="wwr/site-plan-developing.html">White water rafting Siteplan</a>
+        <a href="wwr/site-plan-rafting.html">White water rafting Siteplan</a>
       </nav>
     </header>
     <main>
