Adjusted the siteplan, and updated fonts.

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -67,26 +67,21 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Nunito
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Nunito
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, White Water Rafting Company
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      When it comes to enjoying the beautiful view of the rapids of Idaho, look no place futher than the one at your fingertips.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
-      Trips vary from mild and great for families, to trips exclusively for
-      physically fit and experienced rafters. No matter what type of river
-      adventures you are seeking, White Water Rafting Company can make it
-      happen for you.
+      Life needs adventure, and we have just the options for your and your family. 
+      Why not give it a try, and enjoy something new and breathtaking. 
     </p>
 
     <!-- ------------------------Step 13------------------------------ -->
