Added color positioning

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="#">Home</a>
         <a href="wwr/index.html">White water rafting website</a>
         <a href="wwr/site-plan-rafting.html">White water rafting Siteplan</a>
+        <a href="positioning.html">Color Positioning</a>
       </nav>
     </header>
     <main>
