--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link type="text/css" rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
     <div id="content">
@@ -14,7 +15,9 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
+            <a href="#">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
     <div id="hero">
@@ -45,6 +48,7 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>Beyond the joys of adventure</h2>
