Adjusted and added lots of details to the pages

--- a/psp/site-plan.html
+++ b/psp/site-plan.html
@@ -21,7 +21,15 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>This website is a base for my final project, that will display my game, and show off different skills</p>  <!-- change this -->
+      <p>This website is a base for my final project, that will display my game, and show off different skills
+        The main idea of this website is to show off a game that has been a personal project for me.
+        The audience that I have will be my classmates, as well as my professor. But the main idea here is people who are following my ideas for the game.
+        The purpose of the website is to also display easy to understand information. And lots of pictures and videos that show off the game.
+        The website will showoff lots of details, and questions and answers that main be generally asked about the game, release date, size, etc.
+        A large amount of the screenshots and details will show off how to navigate the site, as well as work on making it easy to understand.
+        Another large point of this site will help people not have to read a lot of details, but quick and easy inforamtion that they can connect together.
+
+      </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
@@ -99,8 +107,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">The game itself</a>
+        <a href="#">Details and Background</a>
       </nav>
       <hr>
       <h2>
@@ -136,28 +144,30 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The face of the website will be here where people will see the main front page, the short description, and a video with screenshots 
+        for people to enjoy, and to learn more
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
+        <img src="images/town screenshot.png" alt="image for homepage" width="1000" height="500">
         <img src="#" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Here I will be showing off the mechanics of the game. And things to expect here which will involve the game itself.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/boss screenshot.png" alt="image for page" width="1000" height="500">
+        <img src="images/combat screenshot.png" alt="image for page" width="1000" height="500">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Here I will be showing off the details, for the world, and all to travel around the world of this game.
+        Screenshots of different biomes, and areas for people can enjoy.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
+        <img src="images/tomb screenshot.png" alt="image for page3" width="1000" height="500">
         <img src="#" alt="image for page3">
 
       </ul>
