Fixed url in worldmap

--- a/psp/worldmap.html
+++ b/psp/worldmap.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="worldmap.html">World Map</a>
-            <a href="#">Combat guide</a>
+            <a href="combatguide.html">Combat guide</a>
             <a href="site-plan.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
