Fixed the download for the demo

--- a/psp/index.html
+++ b/psp/index.html
@@ -29,7 +29,7 @@
             <h1 class="home-title">Seeking adventure in a memorable new world</h1>
             <h4>Experience refreshing combat, and a breathtaking world </h4>
             <div class='button-box'>
-                <a class='View' href="downloads/Scape_alpha01.exe">Demo the game</a>
+                <a class='View' href="downloads/Scape_alpha01.zip">Demo the game</a>
             </div>
             
         </section>
